# Homework_RubikcubeAlgorithm

./: README.md  pyproject.toml
src/rubiks_cube/: cube.py  gui.py  search.py
tests/: test_search.py
