[project]
name = "rubik-algorithm"
version = "0.1.0"
description = "A Rubik's Cube solver using various search algorithms"
authors = [
    { name = "Boxuan", email = "boxuan.chen@ue-germany.de" },
]
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
    
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.poetry]
packages = [{include = "rubikalgorithm", from = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
